fix jump-link css so the border does not appear in xs overlap issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -610,6 +610,9 @@ p.card-text {
     .date-side {
         display: none;
     }
+    .jump-link:hover, .jump-link:active, .jump-link:focus {
+        border: none;
+    }
 }
 
 /* bootstrap-sm */
